--- a/web/HTML/index.html
+++ b/web/HTML/index.html
@@ -13,8 +13,6 @@
   <script src="https://cdn.jsdelivr.net/npm/node-chatgpt@1.0.0/build/index.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
 
-  <script src="/Food-Calendar/web/JS/main.js"></script>
-
   <link rel="stylesheet" href="/Food-Calendar/web/CSS/calendar.css">
   <link rel="stylesheet" href="/Food-Calendar/web/CSS/items.css">
   <link rel="stylesheet" href="/Food-Calendar/web/CSS/sidebar/sidebar.css">
@@ -22,7 +20,7 @@
   <script>
     function dragStartHandler(ev) {
       ev.dataTransfer.setData("text/plain", ev.target.id); const img = new Image();
-      img.src = "/web/IMG/Blank.png";
+      img.src = "";
       ev.dataTransfer.setDragImage(img, 10, 10);
     }
   </script>
