--- a/web/HTML/index.html
+++ b/web/HTML/index.html
@@ -100,8 +100,13 @@
     </div>
   </div>
   <div class="sidebarRight" id="sidebarR">
-    <div class="flag-right" id="rToggle" onclick="toggleRightSidebar()">
-      <ion-icon name="chevron-forward-sharp" id="rightSidebarIcon" class="sidebar-hide"></ion-icon>
+    <div class="tab-list" id="tab-list">
+      <div class="flag-right" id="rToggle" onclick="toggleRightSidebar()">
+        <ion-icon name="chevron-back-sharp" id="rightSidebarIcon" class="sidebar-hide"></ion-icon>
+      </div>
+      <div class="flag-right" id="newRecipe" onclick="toggleRightSidebar()">
+        <ion-icon name="add-circle-outline" id="rightSidebarIcon" class="sidebar-hide"></ion-icon>
+      </div>
     </div>
   </div>
   <script src="/Food-Calendar/web/JS/main.js"></script>
