--- a/web/HTML/index.html
+++ b/web/HTML/index.html
@@ -16,7 +16,9 @@
   <link rel="stylesheet" href="/Food-Calendar/web/CSS/calendar.css">
   <link rel="stylesheet" href="/Food-Calendar/web/CSS/items.css">
   <link rel="stylesheet" href="/Food-Calendar/web/CSS/sidebar/sb_main.css">
+
   <link rel="stylesheet" href="/Food-Calendar/web/CSS/sidebar/sb_right.css">
+  <link rel="stylesheet" href="/Food-Calendar/web/CSS/sidebar/right/newRecipe.css">
 
   <script>
     function dragStartHandler(ev) {
