--- a/web/HTML/index.html
+++ b/web/HTML/index.html
@@ -111,6 +111,8 @@
         <h3>Recipe Description</h3>
         <textarea type="text" class="recipe-gen-box" id="rdesc" name="rdesc"
           placeholder="Paste your recipe's name, instructions, and ingredients here. Based on these instructions, a new recipe will be generated and added to the book (left)."></textarea><br><br>
+        <textarea type="text" class="recipe-img-box" id="rdesc" name="rdesc"
+          placeholder="If you want, paste a link to an image of the recipe here."></textarea><br><br>
         <button class="gen-btn" id="gen-btn" onclick="genRecipe()">generate recipe</button>
       </div>
     </div>
