--- a/web/HTML/index.html
+++ b/web/HTML/index.html
@@ -19,34 +19,19 @@
 
   <link rel="stylesheet" href="/Food-Calendar/web/CSS/sidebar/sb_right.css">
   <link rel="stylesheet" href="/Food-Calendar/web/CSS/sidebar/right/newRecipe.css">
-
-  <script>
-    function dragStartHandler(ev) {
-      ev.dataTransfer.setData("text/plain", ev.target.id); const img = new Image();
-      img.src = "";
-      ev.dataTransfer.setDragImage(img, 10, 10);
-    }
-  </script>
 </head>
 
 <body>
   <div class="sidebar" id="sidebarL">
     <h2>Recipe Book</h2>
     <div class="recipe-list" id="recipe-list">
-      <div class="item" ondragstart="dragStartHandler(event);" id="food_1">
+      <!-- <div class="item" ondragstart="dragStartHandler(event);" id="food_1">
         <img src="/Food-Calendar/web/IMG/Cookie.jpg" class="food-img"></img>
         <div style="display: flex; flex-direction: column;" class="recipe-schedule">
           <h2>Chocolate Chip Cookies</h2>
           <p id="p">Here's where you'd keep a short description of the food. Bla Bla Bla....</p>
         </div>
-      </div>
-      <div class="item" ondragstart="dragStartHandler(event);" id="food_2">
-        <img src="/Food-Calendar/web/IMG/Placeholder.png" class="food-img"></img>
-        <div style="display: flex; flex-direction: column;" class="recipe-schedule">
-          <h2>Spaghetti Bolognese</h2>
-          <p id="p">The best pasta you'll ever have!! grahh!!</p>
-        </div>
-      </div>
+      </div> -->
     </div>
     <div class="flag" id="lToggle" onclick="toggleLeftSidebar()">
       <ion-icon name="chevron-back-sharp" id="leftSidebarIcon" class="sidebar-hide"></ion-icon>
@@ -101,6 +86,9 @@
       <div class="flag-right" id="todaysRecipe" onclick="setSidebarTab('todaysRecipe')">
         <ion-icon name="today-outline" id="todayTabBtn" class="sidebar-hide"></ion-icon>
       </div>
+      <div class="flag-right" id="shoppingList" onclick="setSidebarTab('shoppingList')">
+        <ion-icon name="pricetags-outline" id="shoppingListBtn" class="sidebar-hide"></ion-icon>
+      </div>
       <div class="flag-right" id="settings" onclick="setSidebarTab('settings')">
         <ion-icon name="settings-outline" id="settingsTabBtn" class="sidebar-hide"></ion-icon>
       </div>
@@ -109,9 +97,11 @@
       <div>
         <h2>New Recipe</h2>
         <h3>Recipe Description</h3>
+        <h4>Please do not use this to generate recipes!</h4>
         <textarea type="text" class="recipe-gen-box" id="rdesc" name="rdesc"
-          placeholder="Paste your recipe's name, instructions, and ingredients here. Based on these instructions, a new recipe will be generated and added to the book (left)."></textarea><br><br>
-        <textarea type="text" class="recipe-img-box" id="rdesc" name="rdesc"
+          placeholder="Paste your recipe's name, instructions, and ingredients here. Based on these instructions, a new recipe will be generated and added to the recipe book on the left sidebar."></textarea><br><br>
+        <h3 style="margin-top: 0;">Recipe Image (Optional)</h3>
+        <textarea type="text" class="recipe-img-box" id="recipeimgbox" name="rdesc"
           placeholder="If you want, paste a link to an image of the recipe here."></textarea><br><br>
         <button class="gen-btn" id="gen-btn" onclick="genRecipe()">generate recipe</button>
       </div>
@@ -119,12 +109,15 @@
     <div class="todaysRecipeTab" id="todaysRecipeTab">
       <p>Today's recipe Tab. Nothing here yet!</p>
     </div>
+    <div class="shoppingListTab" id="shoppingListTab">
+      <p>Shopping List. Nothing here yet!</p>
+    </div>
     <div class="settingsTab" id="settingsTab">
       <p>Settings tab. Nothing here yet!</p>
     </div>
   </div>
-  <script src="/Food-Calendar/web/JS/main.js"></script>
   <script src="/Food-Calendar/web/JS/recipes.js"></script>
+  <script src="/Food-Calendar/web/JS/main.js"></script>
   <script src="/Food-Calendar/web/JS/sidebars.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
