--- a/web/HTML/index.html
+++ b/web/HTML/index.html
@@ -109,27 +109,44 @@
     </div>
     <div class="todaysRecipeTab" id="todaysRecipeTab">
       <h2>Today</h2>
-      <div class="todays-recipe">
-        <div class="flex-row">
-          <img src="../IMG/FoodIcon.png"></img>
-          <div>
-            <h3 id="">Recipe Name</h3>
-            <p>Recipe Description</p>
+      <div class="tr-template" id="tr-template">
+        <div class="todays-recipe">
+          <div class="flex-row">
+            <img src="../IMG/FoodIcon.png"></img>
+            <div>
+              <h3 id="tr-name">Recipe Name</h3>
+              <p id="tr-desc">Recipe Description</p>
+            </div>
           </div>
-        </div>
-        <div class="flex-row" style="margin-top: 5px;">
-          <textarea placeholder="No Notes"></textarea>
-        </div>
-        <div class="ingredients">
-          <h3>Ingredients</h3>
-          <ul>
-            <li id="ingredient">(Half Cup) Flour</li>
-          </ul>
-        </div>
-        <div class="recipe-steps">
-          <div class="step flex-row" id="step">
-            <h3>1</h3>
-            <p>Recipe goooooooooooooooooooooooooooby</p>
+          <div class="recipe-info flex-row">
+            <div class="factoid">
+              <h4>Calories</h4>
+              <p id="f-cal">500</p>
+            </div>
+            <div class="factoid">
+              <h4>Prep Time</h4>
+              <p id="f-prep">15m</p>
+            </div>
+            <div class="factoid">
+              <h4>Cook Time</h4>
+              <p id="f-cook">25m</p>
+            </div>
+            <div class="factoid">
+              <h4>Servings</h4>
+              <p id="f-serv">2 - 5</p>
+            </div>
+          </div>
+          <div class="ingredients">
+            <h3>Ingredients</h3>
+            <ul>
+              <li id="ingredient">(Half Cup) Flour</li>
+            </ul>
+          </div>
+          <div class="recipe-steps">
+            <div class="step flex-row" id="step">
+              <h3>1</h3>
+              <p>Recipe Step Description</p>
+            </div>
           </div>
         </div>
       </div>
