make it update on calendar change

--- a/web/HTML/index.html
+++ b/web/HTML/index.html
@@ -114,7 +114,7 @@
           <details>
             <summary id="summary">Recipe Name</summary>
             <div class="todays-recipe">
-              <div class="flex-row">
+              <div class="flex-row" style="margin-bottom: 8px;">
                 <img src="../IMG/FoodIcon.png" id="tr-img"></img>
                 <div>
                   <h3 id="tr-name">Recipe Name</h3>
