make vercel compatible

--- a/web/index.html
+++ b/web/index.html
@@ -13,13 +13,13 @@
   <script src="https://cdn.jsdelivr.net/npm/node-chatgpt@1.0.0/build/index.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
 
-  <link rel="stylesheet" href="/Food-Calendar/web/CSS/calendar.css">
-  <link rel="stylesheet" href="/Food-Calendar/web/CSS/items.css">
-  <link rel="stylesheet" href="/Food-Calendar/web/CSS/sidebar/sb_main.css">
+  <link rel="stylesheet" href="../web/CSS/calendar.css">
+  <link rel="stylesheet" href="../web/CSS/items.css">
+  <link rel="stylesheet" href="../web/CSS/sidebar/sb_main.css">
 
-  <link rel="stylesheet" href="/Food-Calendar/web/CSS/sidebar/sb_right.css">
-  <link rel="stylesheet" href="/Food-Calendar/web/CSS/sidebar/right/newRecipe.css">
-  <link rel="stylesheet" href="/Food-Calendar/web/CSS/sidebar/right/todaysRecipe.css">
+  <link rel="stylesheet" href="../web/CSS/sidebar/sb_right.css">
+  <link rel="stylesheet" href="../web/CSS/sidebar/right/newRecipe.css">
+  <link rel="stylesheet" href="../web/CSS/sidebar/right/todaysRecipe.css">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
     <h2>Recipe Book</h2>
     <div class="recipe-list" id="recipe-list">
       <!-- <div class="item" ondragstart="dragStartHandler(event);" id="food_1">
-        <img src="/Food-Calendar/web/IMG/Cookie.jpg" class="food-img"></img>
+        <img src="./web/IMG/Cookie.jpg" class="food-img"></img>
         <div style="display: flex; flex-direction: column;" class="recipe-schedule">
           <h2>Chocolate Chip Cookies</h2>
           <p id="p">Here's where you'd keep a short description of the food. Bla Bla Bla....</p>
@@ -163,10 +163,10 @@
       <p>Settings tab. Nothing here yet!</p>
     </div>
   </div>
-  <script src="/Food-Calendar/web/JS/recipes.js"></script>
-  <script src="/Food-Calendar/web/JS/main.js"></script>
-  <script src="/Food-Calendar/web/JS/todaysRecipe.js"></script>
-  <script src="/Food-Calendar/web/JS/sidebars.js"></script>
+  <script src="../web/JS/recipes.js"></script>
+  <script src="../web/JS/main.js"></script>
+  <script src="../web/JS/todaysRecipe.js"></script>
+  <script src="../web/JS/sidebars.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
