--- a/web/index.html
+++ b/web/index.html
@@ -13,13 +13,13 @@
   <script src="https://cdn.jsdelivr.net/npm/node-chatgpt@1.0.0/build/index.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
 
-  <link rel="stylesheet" href="../web/CSS/calendar.css">
-  <link rel="stylesheet" href="../web/CSS/items.css">
-  <link rel="stylesheet" href="../web/CSS/sidebar/sb_main.css">
+  <link rel="stylesheet" href="/CSS/calendar.css">
+  <link rel="stylesheet" href="/CSS/items.css">
+  <link rel="stylesheet" href="/CSS/sidebar/sb_main.css">
 
-  <link rel="stylesheet" href="../web/CSS/sidebar/sb_right.css">
-  <link rel="stylesheet" href="../web/CSS/sidebar/right/newRecipe.css">
-  <link rel="stylesheet" href="../web/CSS/sidebar/right/todaysRecipe.css">
+  <link rel="stylesheet" href="/CSS/sidebar/sb_right.css">
+  <link rel="stylesheet" href="/CSS/sidebar/right/newRecipe.css">
+  <link rel="stylesheet" href="/CSS/sidebar/right/todaysRecipe.css">
 </head>
 
 <body>
@@ -163,10 +163,10 @@
       <p>Settings tab. Nothing here yet!</p>
     </div>
   </div>
-  <script src="../web/JS/recipes.js"></script>
-  <script src="../web/JS/main.js"></script>
-  <script src="../web/JS/todaysRecipe.js"></script>
-  <script src="../web/JS/sidebars.js"></script>
+  <script src="/JS/recipes.js"></script>
+  <script src="/JS/main.js"></script>
+  <script src="/JS/todaysRecipe.js"></script>
+  <script src="/JS/sidebars.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
