simple formatting fixes!!!

--- a/web/index.html
+++ b/web/index.html
@@ -111,7 +111,7 @@
       <h2 id="tr-header">Today</h2>
       <div class="recipe-scroll" id="recipe-scroll">
         <div class="tr-template" id="tr-template">
-          <details>
+          <details name="exclusive">
             <summary id="summary">Recipe Name</summary>
             <div class="todays-recipe">
               <div class="flex-row" style="margin-bottom: 8px;">
