--- a/web/index.html
+++ b/web/index.html
@@ -95,8 +95,8 @@
       </div>
     </div>
     <div class="newRecipeTab tab" id="newRecipeTab">
-      <div class="blur-border">
-        <div class="r-gen-container">
+      <div class="gen-outer" id="gen-container-outer">
+        <div class="gen-inner" id="gen-container-inner">
           <h2>New Recipe</h2>
           <h3>Recipe Description</h3>
           <h4>Please do not use this to generate recipes!</h4>
