--- a/web/index.html
+++ b/web/index.html
@@ -96,6 +96,7 @@
     </div>
     <div class="newRecipeTab tab" id="newRecipeTab">
       <div class="gen-outer" id="gen-container-outer">
+        <ion-icon name="build" class="anim-icon" id="anim-icon"></ion-icon>
         <div class="gen-inner" id="gen-container-inner">
           <h2>New Recipe</h2>
           <h3>Recipe Description</h3>
@@ -108,7 +109,6 @@
           <button class="gen-btn" id="gen-btn" onclick="genRecipe()">generate recipe</button>
         </div>
       </div>
-
     </div>
     <div class="todaysRecipeTab tab" id="todaysRecipeTab">
       <h2 id="tr-header">Today</h2>
