--- a/web/index.html
+++ b/web/index.html
@@ -96,7 +96,11 @@
     </div>
     <div class="newRecipeTab tab" id="newRecipeTab">
       <div class="gen-outer" id="gen-container-outer">
-        <ion-icon name="build" class="anim-icon" id="anim-icon"></ion-icon>
+        <div class="generating-popup" id="gen-popup">
+          <ion-icon name="build" class="anim-icon"></ion-icon>
+          <h3>Generating..</h3>
+        </div>
+
         <div class="gen-inner" id="gen-container-inner">
           <h2>New Recipe</h2>
           <h3>Recipe Description</h3>
