add random words

--- a/web/index.html
+++ b/web/index.html
@@ -98,7 +98,7 @@
       <div class="gen-outer" id="gen-container-outer">
         <div class="generating-popup" id="gen-popup">
           <ion-icon name="build" class="anim-icon"></ion-icon>
-          <h3>Generating..</h3>
+          <h3 id="gen-text">Generating..</h3>
         </div>
 
         <div class="gen-inner" id="gen-container-inner">
