--- a/web/index.html
+++ b/web/index.html
@@ -104,7 +104,10 @@
         <div class="gen-inner" id="gen-container-inner">
           <h2>New Recipe</h2>
           <h3>Recipe Description</h3>
-          <h4>Please do not use this to generate recipes!</h4>
+          <div class="flex-row" style="align-items: center; gap: 5px;">
+            <ion-icon name="alert-circle-outline"></ion-icon>
+            <h4>Quality or safety not guarunteed if generated without a recipe.</h4>
+          </div>
           <textarea type="text" class="recipe-gen-box" id="rdesc" name="rdesc"
             placeholder="Paste your recipe's name, instructions, and ingredients here. Based on these instructions, a new recipe will be generated and added to the recipe book on the left sidebar."></textarea><br><br>
           <h3 style="margin-top: 0;">Recipe Image (Optional)</h3>
