--- a/web/index.html
+++ b/web/index.html
@@ -106,7 +106,7 @@
           <h3>Recipe Description</h3>
           <div class="flex-row" style="align-items: center; gap: 5px;">
             <ion-icon name="alert-circle-outline"></ion-icon>
-            <h4>Quality or safety not guarunteed if generated without a recipe.</h4>
+            <h4>Quality or safety not guaranteed if generated without a recipe.</h4>
           </div>
           <textarea type="text" class="recipe-gen-box" id="rdesc" name="rdesc"
             placeholder="Paste your recipe's name, instructions, and ingredients here. Based on these instructions, a new recipe will be generated and added to the recipe book on the left sidebar."></textarea><br><br>
