--- a/web/index.html
+++ b/web/index.html
@@ -125,7 +125,7 @@
             <summary id="summary">Recipe Name</summary>
             <div class="todays-recipe">
               <div class="flex-row" style="margin-bottom: 8px;">
-                <img src="../IMG/FoodIcon.png" id="tr-img"></img>
+                <img src="IMG/FoodIcon.png" id="tr-img"></img>
                 <div>
                   <h3 id="tr-name">Recipe Name</h3>
                   <p id="tr-desc">Recipe Description</p>
