--- a/web/index.html
+++ b/web/index.html
@@ -188,8 +188,8 @@
     </div>
   </div>
 
-  <script src="JS/recipes.js"></script>
-  <script src="JS/main.js"></script>
+  <script type="module" src="JS/recipes.js"></script>
+  <script type="module" src="JS/main.js"></script>
   <script src="JS/todaysRecipe.js"></script>
   <script src="JS/sidebars.js"></script>
   <script type="module" src="JS/shoppinglist.js"></script>
