--- a/web/index.html
+++ b/web/index.html
@@ -192,7 +192,8 @@
           onclick="genShoppingList(document.getElementById('timeframe-select').value);">Generate
           List</button>
       </div>
-      <div>
+
+      <div class="flex-row justify-center">
         <button class="qrGenBtn" onclick="QRCode(true)">Generate Mobile QR Code</button>
       </div>
       <div class="shoppingListBorder">
