--- a/web/mobileShopping.html
+++ b/web/mobileShopping.html
@@ -4,7 +4,17 @@
 <head>
     <script>
         function getParams() {
-            var idx = document.URL.indexOf('?');
+            const params = new URLSearchParams(window.location.search);
+            const data = params.get("data");
+
+            if (data) {
+                const ingredients = JSON.parse(decodeURIComponent(data));
+                console.log(ingredients); // Use as needed
+                var para1 = document.getElementById('element1');
+                para1.textContent = ingredients
+            }
+
+            /* var idx = document.URL.indexOf('?');
             var params = new Array();
             if (idx != -1) {
                 var pairs = document.URL.substring(idx + 1, document.URL.length).split('&');
@@ -14,13 +24,12 @@
                 }
             }
             var para1 = document.getElementById('element1');
-            para1.textContent = unescape(params["var1"]);
+            para1.textContent = unescape(params["var1"]); */
         }
     </script>
 </head>
 
 <body onload="getParams()">
-
     <h3 id="element1">hi</h3>
 </body>
 
